Add support for "trivial" downcalls
Remove the "functions" in "foreign functions".
Simplify "linkToNative" substitution.
Improve error message.
Report unsupported features at runtime.
Change 'bitAlignment' to 'byteAlignment (change from JDK 20->21).
Fix alignment specifier being a postfix modifier (as opposed to a prefix modifier, as in the JDK).
Simplify VMStorage resolution to register.
Add runtime check for generated register allocation.